// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#components/group/fieldset <Group /> With additional props renders 1`] = `
<fieldset
  className="MOCK CLASSNAME"
  onChange={[MockFunction]}
/>
`;

exports[`#components/group/fieldset <Group /> With required props renders 1`] = `
<fieldset
  className="MOCK CLASSNAME"
/>
`;
